--- a/src/main/resources/templates/animal_food.html
+++ b/src/main/resources/templates/animal_food.html
@@ -57,7 +57,30 @@
             border: 2px solid #e6e6e6;
             background: #ffffce;
         }
+        .page_show {
+            padding: 40px 0;
+            text-align: center;
+        }
 
+        .page_show span {
+            display: inline-block;
+            height: 28px;
+            line-height: 28px;
+            padding: 0 11px;
+            margin: 0 5px;
+            text-align: center;
+            font-size: 14px;
+            border-radius: 1px;
+            border: #b7b7b7 solid 1px;
+            background-color: #f8f8f8;
+            cursor: pointer;
+        }
+
+        span.page_cur {
+            color: #fff;;
+            border: #282828 solid 1px;
+            background-color: #424242;
+        }
     </style>
 </head>
 <body>
@@ -144,17 +167,17 @@
             <div class="col-md-auto p-3 m-auto ftco-animate">
                 <span>產地 :</span>
                 <select name="place" id="place">
-                    <option value="">產地</option>
-                    <option value="">台灣</option>
-                    <option value="">日本</option>
+<!--                    <option value="產地">產地</option>-->
+<!--                    <option value="台灣">台灣</option>-->
+<!--                    <option value="日本">日本</option>-->
 <!--           棄用             -->
 <!--                    <option th:each="place:${hashset_place}" th:text="${place}"></option>-->
                 </select>
                 <span>產品種類 :</span>
                 <select name="category" id="category">
-                    <option value="">產品種類</option>
-                    <option value="">貓</option>
-                    <option value="">犬</option>
+<!--                    <option value="產品種類">產品種類</option>-->
+<!--                    <option value="貓">貓</option>-->
+<!--                    <option value="犬">犬</option>-->
 <!--           棄用             -->
 <!--                    <option th:each="category:${hashset_category}" th:text="${category}"></option>-->
                 </select>
@@ -162,54 +185,33 @@
             </div>
 
             <div class="col-md-auto p-3 m-auto ftco-animate div-shadow" style="background-color: #fff; border-radius: 10px 10px 10px 10px;">
-                <table class="table-hover text-center">
-                    <tr class="">
-                        <th class="table-primary">產品名稱</th>
-                        <th class="table-secondary" style="width: 8%;">產地</th>
-                        <th class="table-info" style="width: 10%;">種類</th>
-                        <th class="table-success" style="width: 10%;">重量</th>
-                        <th class="table-danger" style="width: 10%;">適用</th>
-                        <th class="table-light" style="width: 22%;">主要原料</th>
-                        <th class="table-warning" style="width: 22%;">營養成份</th>
-                    </tr>
-                    <tr>
-                        <td>CIAO多樂米2000億乳酸菌貓罐.雞肉+鰹魚+小魚80g</td>
-                        <td>日本</td>
-                        <td>罐頭</td>
-                        <td>0.08公斤</td>
-                        <td>犬</td>
-                        <td>雞肉、金槍魚、銀魚、鰹魚提取物、醣類（低聚醣等）、滅菌乳酸菌、植物油、增稠穩定劑（加工澱粉、增稠多醣）、礦物質（na、p、cl）、調味料（多種氨基酸）、維生素e、紅趜色素、綠茶提取物、類胡蘿蔔素色素。</td>
-                        <td>蛋白質：65%以上、/脂質：02%以上、/粗纖維：01%以下、/灰分：17%以下、/水分：915%以下、/熱量約30kcal／罐</td>
-                    </tr>
-                    <tr th:each="animal_food:${animal_food_list}">
-                        <td th:text="${animal_food.name}"></td>
-                        <td th:text="${animal_food.productionPlace}"></td>
-                        <td th:text="${animal_food.category}"></td>
-                        <td th:text="${animal_food.weight}"></td>
-                        <td th:text="${animal_food.suitable}"></td>
-                        <td th:text="${animal_food.material}"></td>
-                        <td th:text="${animal_food.nutrient}"></td>
-                    </tr>
+                <table class="table-hover text-center" id="test1Result">
+<!--                    <tr>-->
+<!--                        <td>CIAO多樂米2000億乳酸菌貓罐.雞肉+鰹魚+小魚80g</td>-->
+<!--                        <td>日本</td>-->
+<!--                        <td>罐頭</td>-->
+<!--                        <td>0.08公斤</td>-->
+<!--                        <td>犬</td>-->
+<!--                        <td>雞肉、金槍魚、銀魚、鰹魚提取物、醣類（低聚醣等）、滅菌乳酸菌、植物油、增稠穩定劑（加工澱粉、增稠多醣）、礦物質（na、p、cl）、調味料（多種氨基酸）、維生素e、紅趜色素、綠茶提取物、類胡蘿蔔素色素。</td>-->
+<!--                        <td>蛋白質：65%以上、/脂質：02%以上、/粗纖維：01%以下、/灰分：17%以下、/水分：915%以下、/熱量約30kcal／罐</td>-->
+<!--                    </tr>-->
+<!--                    <tr th:each="animal_food:${animal_food_list}">-->
+<!--                        <td th:text="${animal_food.name}"></td>-->
+<!--                        <td th:text="${animal_food.productionPlace}"></td>-->
+<!--                        <td th:text="${animal_food.category}"></td>-->
+<!--                        <td th:text="${animal_food.weight}"></td>-->
+<!--                        <td th:text="${animal_food.suitable}"></td>-->
+<!--                        <td th:text="${animal_food.material}"></td>-->
+<!--                        <td th:text="${animal_food.nutrient}"></td>-->
+<!--                    </tr>-->
                 </table>
             </div>
 
 <!--            沒有完成的分頁功能 可以刪掉    -->
             <div class="col-md-12 p-3 m-auto ftco-animate text-center">
-                <div class="block-27" id="change_page">
-                    <ul>
-                        <li><a href="javascript: goPrePage()">&lt;</a></li>
-                        <li class="active"><span>1</span></li>
-                        <li><a href="?page=2">2</a></li>
-                        <li><a href="?page=3">3</a></li>
-                        <li><a href="?page=4">4</a></li>
-                        <li><a href="?page=5">5</a></li>
-                        <li><a href="">6</a></li>
-                        <li><a href="">7</a></li>
-                        <li><a href="">8</a></li>
-                        <li><a href="">9</a></li>
-                        <li><a href="">10</a></li>
-                        <li><a href="javascript: goNextPage()">&gt;</a></li>
-                    </ul>
+                <div class="block-27">
+                    <p id="pageInfo"></p><br>
+                    <div class="page_show"></div>
                 </div>
             </div>
 
@@ -273,164 +275,161 @@
 
 <script type="text/javascript">
 <!-- 全部都是未完成的功能測試 可以刪掉 -->
-    function search() {
-        let url = "http://localhost:8080/public_shelter?"
-        let page = "page=";
-        let page_value = document.getElementById("page").value;
-        let production_place = "&place=";
-        let place_value = document.getElementById("place").value;
-        let category = "&category="
-        let category_value = document.getElementById("category").value;
-        ajaxToServer("change_page", url + page + page_value +
-            production_place + place_value +
-            + category + category_value);
-        ajaxToServer("query_block", url + page + page_value +
-            production_place + place_value +
-            + category + category_value);
+var limit;
+var pages;
+
+$.ajax({//載入頁面先執行一次
+    type: "GET",
+    url: "/animal_foods",
+    success: function (data) {
+        getAnimalFoodList(data);
+    }
+});
+
+$.ajax({//載入下拉選單
+    type: "GET",
+    url: "/getAnimalFoodsComboBox",
+    success: function (data) {
+        console.log(data);
+        console.log(data[0]);
+        console.log(data[1]);
+
+        $("#place").append("<option value='全部'>全部</option>");
+        $("#category").append("<option value='全部'>全部</option>");
+
+        $.each(data[0], function (index, item) {
+            $("#place").append("<option value='"+item+"'>"+item+"</option>");
+        })
+        $.each(data[1], function (index, item) {
+            $("#category").append("<option value='"+item+"'>"+item+"</option>");
+        })
+    }
+});
+
+function getAnimalFoodList(data) {
+    $("#test1Result").empty();//清空元素
+
+    var title = "<tr class=''>" +
+        "<th class='table-primary'>產品名稱</th>" +
+        "<th class='table-secondary' style='width: 8%;'>產地</th>" +
+        "<th class='table-info' style='width: 10%;'>種類</th>" +
+        "<th class='table-success' style='width: 10%;'>重量</th>" +
+        "<th class='table-danger' style='width: 10%;'>適用</th>" +
+        "<th class='table-light' style='width: 22%;'>主要原料</th>" +
+        "<th class='table-warning' style='width: 22%;'>營養成份</th>" +
+        "</tr>";
+
+    $("#test1Result").append(title);//加入標題
+
+    $.each(data["results"], function (index, item) {
+        var html = "" +
+            "<tr>" +
+            "<td>"+item.name+"</td>" +
+            "<td>"+item.productionPlace+"</td>" +
+            "<td>"+item.category+"</td>" +
+            "<td>"+item.weight+"</td>" +
+            "<td>"+item.suitable+"</td>" +
+            "<td>"+item.material+"</td>" +
+            "<td>"+item.nutrient+"</td>" +
+            "</tr>";
+
+        $("#test1Result").append(html);//加入內容
+    })
+
+    pages = Math.ceil(data.total / data.limit);
+    console.log(data.offset / data.limit)
+    limit = data.limit;
+
+    $("#pageInfo").text("總頁數:" + pages + "  總筆數:" + data.total);
+    pageSet(pages);
+
+    console.log("單頁筆數limit:" + data["limit"]);
+    console.log("跳過幾筆資料offset:" + data["offset"]);
+    console.log("總筆數:" + data["total"]);
+
+    $.getScript('js/main.js');
+}
+
+//輸出頁碼
+function pageSet(pages) {
+    var pageHtml = '';
+    var start, end;
+    if (listPage < 6) {
+        start = 1;
+    } else {
+        start = listPage - 5;
+    }
+    if (listPage > pages - 5) {
+        end = pages;
+    } else {
+        end = listPage + 5;
     }
 
-    function sendPageToServer() {
-        let url = "http://localhost:8080/public_shelter?"
-        let page = "page=";
-        let page_value = document.getElementById("page").value;
-        let production_place = "&place=";
-        let category = "&category="
-        if (hasSearchCondition()) {
-            let place_value = document.getElementById("place").value;
-            let category_value = document.getElementById("category").value;
-            ajaxToServer("query_block", url + page + page_value +
-                production_place + place_value +
-                + category + category_value);
+    if (listPage > 1) {
+        pageHtml += '<span>上一頁</span>';
+    }
+    for (var i = start, page_cur = ''; i <= end; i++) {
+        if (listPage == i) {
+            page_cur = 'page_cur';
         } else {
-            ajaxToServer("query_block", url + page + page_value);
+            page_cur = '';
         }
+        pageHtml += '<span class="' + page_cur + '">' + i + '</span>';
     }
-
-    function sendPageToServerBySearch() {
-        let url = "http://localhost:8080/public_shelter?"
-        let page = "page=";
-        let page_value = document.getElementById("page").value;
-        let production_place = "&place=";
-        let place_value = document.getElementById("place").value;
-        let category = "&category="
-        let category_value = document.getElementById("category").value;
-        ajaxToServer("query_block", url + page + page_value +
-            production_place + place_value +
-            + category + category_value);
+    if (listPage < pages) {
+        pageHtml += '<span>下一頁</span>';
     }
+    $('.page_show').empty().append(pageHtml);
+}
 
-    function goPrePage() {
-        var x = document.getElementById("page").value;
-        var p = parseInt(x, 10) - 1;
-        if (p == 0) {
-            p = 1
+//選擇分頁
+$('body').on('click', '.page_show span', function () {
+    var $this = $(this);
+    if ($this.hasClass('page_cur')) {
+        return;
+    }
+    var page = $this.html();
+    if (page == '上一頁') {
+        listPage = listPage - 1;
+        changePage(listPage);
+        // goPrePage();
+    } else if (page == '下一頁') {
+        listPage = listPage + 1;
+        changePage(listPage);
+        // goNextPage();
+    } else {
+        listPage = parseInt(page);
+        changePage(listPage);
+    }
+    //根據頁碼獲取當前頁列表數據
+    pageSet(pages);
+});
+var listPage = 1;
+
+function changePage(page) {
+    var place = $("#place").val();
+    var category = $("#category").val();
+    var offset = limit * (page - 1);
+    var url;
+    console.log("offset"+offset);
+    console.log("page"+page);
+    console.log(place);
+    console.log(category);
+
+    // url = "/animal_foods?offset=" + limit * (page - 1) + "&productionPlace=" + place + "&category=" + category;
+
+    url = "/animal_foods?offset=" + limit * (page - 1);
+
+
+    $.ajax({
+        type: "GET",
+        url: url,
+        success: function (data) {
+            getAnimalFoodList(data);
         }
-        document.getElementById("page").value = p;
-        if (hasSearchCondition()) {
-            sendPageToServerBySearch()
-        } else {
-            sendPageToServer()
-        }
-    }
+    })
+}
 
-    function goNextPage() {
-        var x = document.getElementById("page").value;
-        var p = parseInt(x, 10) + 1;
-        var pages = document.getElementById("page").lastElementChild.value
-        pages = parseInt(pages, 10)
-        if (p > pages) {
-            p = pages
-        }
-        document.getElementById("page").value = p;
-
-        if (hasSearchCondition()) {
-            sendPageToServerBySearch()
-        } else {
-            sendPageToServer()
-        }
-    }
-
-    function hasSearchCondition() {
-        var kind = document.getElementById("kind").value;
-        var shelter = document.getElementById("shelter").value;
-        if ((kind != "不分種類") || (shelter != "所有收容所")) {
-            return true
-        }
-        return false
-    }
-
-    function ajaxToServer(id, url) {
-        function main() {
-            return new Promise(function (resolve, reject) {
-                window.setTimeout(function () {
-                    let request = new XMLHttpRequest();
-                    // 請求方法及網址
-                    request.open("GET", url);
-                    // 請求完成並執行函式
-                    request.onload = function () {
-                        let parser = new DOMParser();
-                        let docParsed = parser.parseFromString(request.responseText, "text/html");
-                        // 替換指定元素內容
-                        document.getElementById(id).innerHTML = docParsed.body.getElementById(id).innerHTML;
-                    };
-                    // 送出執行完畢之請求內容
-                    request.send();
-                    resolve("查詢資料");
-                }, 500);
-            });
-        }
-        function loadOk(){
-            return new Promise(function(resolve, reject){
-                window.setTimeout(function(){
-                    $.getScript('js/main.js');
-                    console.log('顯示列表');
-                    resolve('顯示列表');
-                }, 500);
-            });
-        }
-
-        main().then(loadOk);
-
-    }
-
-    function test() {
-        let a = 147;
-        let b = 10;
-        let quo = Math.ceil(a/b);
-        console.log(quo);
-    }
-
-    function login(){
-        var email = $("#input_email").val();
-        var password = $("#input_password").val();
-        var params = {
-            email: email,
-            password: password
-        };
-        // console.log("帳號" +　email);
-        // console.log("密碼" +　password);
-        // console.log("參數" + JSON.stringify(params));
-
-        $.ajax({
-            url: "/users/login",
-            type: "POST",
-            contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({
-                email: email,
-                password: password
-            }),
-            success: function (data) {
-                if (data == true) {
-                    console.log("1" + data)
-                    window.location.href = "/test.html"
-                } else {
-                    console.log("2" + data)
-                    $("#input_password").val("");
-                    alert("密碼錯誤！！");
-                }
-            }
-        });
-    }
 
 </script>
 
