--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -55,14 +55,15 @@
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
 
+                <li class="nav-item"><a href="http://localhost:8080/index" class="nav-link">首頁</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/public_shelter" class="nav-link">公立領養</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
-                <li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
-                <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登寵物</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
+                <li class="nav-item active"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/funeral" class="nav-link">寵物送別</a></li>
                 <li id="userPublishHistory" class="nav-item"></li>
-
                 <li id="userManagement" class="nav-item"></li>
-
                 <li id="loginAndRegist" class="nav-item"><a href="http://localhost:8080/login_register"
                                                             class="nav-link">登入註冊</a></li>
 
