--- a/src/main/resources/templates/login_register.html
+++ b/src/main/resources/templates/login_register.html
@@ -63,7 +63,10 @@
                 <li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/funeral" class="nav-link">寵物送別</a></li>
-                <li class="nav-item active"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
+                <li id="userPublishHistory" class="nav-item"></li>
+                <li id="userManagement" class="nav-item"></li>
+                <li id="loginAndRegist" class="nav-item"><a href="http://localhost:8080/login_register"
+                                                            class="nav-link">登入註冊</a></li>
             </ul>
         </div>
     </div>
