--- a/src/main/resources/templates/login_register.html
+++ b/src/main/resources/templates/login_register.html
@@ -49,24 +49,20 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" href="http://localhost:8080/index"><span class="flaticon-pawprint-1 mr-2"></span>🐾寵物資訊平台</a>
+        <a class="navbar-brand">🐾寵物資訊平台</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fa fa-bars"></span>
         </button>
         <div class="collapse navbar-collapse" id="ftco-nav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a href="http://localhost:8080/index" class="nav-link">首頁</a></li>
+
                 <li class="nav-item"><a href="http://localhost:8080/public_shelter" class="nav-link">公立領養</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/personal_shelter" class="nav-link">一般領養</a></li>
-                <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登送養</a></li>
                 <li class="nav-item"><a href="http://localhost:8080/missing" class="nav-link">走失協尋</a></li>
-                <li class="nav-item"><a href="http://localhost:8080/animal_hospital" class="nav-link">動物醫院</a></li>
-                <li class="nav-item"><a href="http://localhost:8080/funeral" class="nav-link">寵物送別</a></li>
-                <li id="userPublishHistory" class="nav-item"></li>
-                <li id="userManagement" class="nav-item"></li>
-                <li id="loginAndRegist" class="nav-item"><a href="http://localhost:8080/login_register"
-                                                            class="nav-link">登入註冊</a></li>
+                <li class="nav-item"><a href="http://localhost:8080/publish" class="nav-link">刊登寵物</a></li>
+
+                <li class="nav-item"><a href="http://localhost:8080/login_register" class="nav-link">登入註冊</a></li>
             </ul>
         </div>
     </div>
@@ -78,9 +74,7 @@
     <div class="container">
         <div class="row no-gutters slider-text align-items-end">
             <div class="col-md-9 ftco-animate pb-5">
-                <p class="breadcrumbs mb-2"><span class="mr-2"><a href="http://localhost:8080/index">首頁<i
-                        class="ion-ios-arrow-forward"></i></a></span> <span>> 登入註冊<i class="ion-ios-arrow-forward"></i></span>
-                </p>
+                <p class="breadcrumbs mb-2"><span>登入註冊 <i class="ion-ios-arrow-forward"></i></span></p>
                 <h1 class="mb-0 bread">登入註冊</h1>
             </div>
         </div>
